macosx: replaced deprecated 'UpdateSystemActivity' call with a modern, IOKit-based approach to prevent system sleep (close #6589)

This way, we can also differenciate between screen sleep (for video) and system sleep (for audio)